--- a/libftprintf/Makefile
+++ b/libftprintf/Makefile
@@ -6,7 +6,7 @@
 #    By: matoledo <matoledo@student.42madrid.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/19 13:02:55 by matoledo          #+#    #+#              #
-#    Updated: 2025/05/19 16:16:53 by matoledo         ###   ########.fr        #
+#    Updated: 2025/05/19 16:46:07 by matoledo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,8 @@ SRCS = ft_printf.c \
 OBJS = $(SRCS:.c=.o)
 
 $(NAME): $(OBJS)
-	ar -rcs $(NAME) $(OBJS)
+	$(MAKE) -C .. all
+	ar -rcs $(NAME) $(OBJS) ../*.o
 
 %.o: %.c
 	$(CC) -c $(CFLAGS) $<
@@ -33,10 +34,12 @@ all: $(NAME)
 
 .PHONY: clean
 clean:
+	$(MAKE) -C .. clean
 	rm -rf *.o
 
 .PHONY: fclean
 fclean:
+	$(MAKE) -C .. fclean
 	rm -rf *.o *.a
 
 .PHONY: re
